<resources>
    <string name="app_name">Servus</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="launcher_title">Servus</string>

    <string name="placeholder">tbd</string>

    <string name="descriptions_btn_settings">ImageView to access the settings / profile section.</string>
    <string name="descriptions_btn_creator">Button to access the creator section.</string>
    <string name="descriptions_btn_filter">ImageView to access the filter section.</string>
    <string name="descriptions_btn_participant">MapMarker to access the participant section.</string>

    <string name="tmp_settings">TODO - Settings / Profile Section</string>
    <string name="tmp_creator">Create Event</string>
    <string name="tmp_filter">TODO - Filter Section</string>
    <string name="tmp_participant">TODO - Participant Section</string>

    <string name="content_create_meetup">Create a Meet-Up</string>
    <string name="main_bottom_button_view_event">View your current event</string>
    <string name="main_bottom_button_view_own_event">View your current event</string>
    <string name="active_filter_indicator">0</string>

    <string name="event_creation_label_eventname">Name</string>
    <string name="event_creation_label_description">Description</string>
    <string name="event_creation_label_genre">What do you want to do?</string>
    <string name="event_creation_label_attendee_count">How many people are allowed to attend?</string>
    <string name="event_creation_button_create">Create your own Meet-Up</string>
    <string name="event_creation_genre_sport">Sport</string>
    <string name="event_creation_genre_party">Party</string>
    <string name="event_creation_genre_food">Food</string>
    <string name="event_creation_genre_activity">Others</string>
    <string name="event_creation_genre_hangout">Hang-out</string>
    <string name="event_creation_button_edit">Save</string>
    <string name="event_creation_hint_label">Note:</string>
    <string name="event_creation_hint">Please note that the event will be created at your current location. This information, as well as your profile data, will be shared with other users when creating the Meet-Up.</string>

    <string name="event_details_label_eventname">Name</string>
    <string name="event_details_default_eventname">%EVENTNAME%</string>
    <string name="event_details_label_description">Description</string>
    <string name="event_details_default_description">%DESCRIPTION%</string>
    <string name="event_details_label_attendees">Attendees</string>
    <string name="event_details_default_attendees">% X / Y %</string>
    <string name="event_details_label_genre">Mode</string>
    <string name="event_details_default_genre">%meetup-mode%</string>
    <string name="event_details_label_role_creator">Creator</string>
    <string name="event_details_label_role_attendee">Attendee</string>
    <string name="event_details_default_creator">%USERNAME%</string>
    <string name="event_details_button_attend">Attend to Meet-Up</string>
    <string name="event_details_button_close_event">Close Meet-Up</string>
    <string name="event_details_button_withdraw">Withdraw attendance</string>
    <string name="event_details_button_attend_loading">Loading…</string>
    <string name="event_details_button_edit">Edit Meet-Up</string>

    <string name="tutorial_skip">Skip onboarding</string>
    <string name="tutorial_next">Next Slide</string>
    <string name="tutorial_prev">Previous slide</string>
    <string name="tutorial_finalize">Finalize onboarding</string>
    <string name="tutorial_create_account">Introduce yourself</string>
    <string name="tutorial_servus_title">Servus</string>
    <string name="tutorial_servus_subtitle">[ˈseɐ̯vus]</string>
    <string name="tutorial_servus_content">Servus is a traditional greeting in the Bavarian language. With our app you can say \'servus\' to other students. Use our app to meet new people - simple and fast.</string>
    <string name="tutorial_meetups_title">Meetups</string>
    <string name="tutorial_meetups_subtitle">Create or participate.</string>
    <string name="tutorial_meetups_content">Participate at any meetup you discover or create your own meetup. Be aware, just like in the real world, you can\'t be in two places at once - either create or participate.</string>
    <string name="tutorial_accounts_title">Accounts</string>
    <string name="tutorial_accounts_subtitle">Locally until you need it.</string>
    <string name="tutorial_accounts_content">Your profile data stays on your phone until you attend an event. Your profile data is only visible to other users until the event is deleted.</string>
    <string name="tutorial_location_title">&#160;Location</string>
    <string name="tutorial_location_subtitle">Permission required.</string>
    <string name="tutorial_location_content">This service works with the location signals of every user, we will ask you to grant us the permission to access your device\'s location services.</string>
    <string name="tutorial_finalize_account_creation">Finish &amp; continue</string>

    <string name="location_404">No location found</string>
    <string name="network_404">No network connection</string>

    <string name="location_404_dialog_title">Enable GPS</string>
    <string name="location_404_dialog_content">To ensure full functionality, this app needs to access your location via your phones location settings. Please ensure that your systems location services are enabled.</string>
    <string name="btn_alertDialog">Go to settings</string>

    <string name="permission_denied_title">&#160;Permission required&#160;</string>
    <string name="permission_denied_subtitle">Set manually.</string>
    <string name="permission_denied_content">We are sorry! Without your permission to access your current phone location and storage we can\'t or just partially offer you our most valuable benefits: create or participate at meetups. We would gladly appreciate if you would reconsider an authorization. Thank you!</string>
    <string name="permission_denied_link">Go to permission settings</string>

    <string name="settings_profile_name_label">Whats is your name?&#160;</string>
    <string name="settings_profile_name">%USERNAME%</string>
    <string name="settings_profile_name_hint">Prename Lastname</string>
    <string name="settings_gender_label">What is your gender?&#160;</string>
    <string name="settings_gender_hint">Gender</string>
    <string name="settings_gender">% GENDER %</string>
    <string name="settings_age_label">When is your birthday?&#160;</string>
    <string name="settings_gender_male">Male</string>
    <string name="settings_gender_female">Female</string>
    <string name="settings_gender_divers">Divers</string>
    <string name="settings_age">% XX.YY.ZZZZ %</string>
    <string name="settings_age_hint">Date of birth</string>
    <string name="settings_profile_picture_label">Set or swap your profile picture</string>
    <string name="settings_profile_picture_sublabel">Click on the image!</string>
    <string name="settings_study_course_label">What do you study?&#160;</string>
    <string name="settings_study_course">% STUDY COURSE %</string>
    <string name="settings_study_course_hint">Course of study</string>
    <string name="settings_profile_picture_picker">Select your profile picture</string>
    <string name="settings_show_vita">Save &amp; Create</string>

    <string name="profilecard_name_label">Username</string>
    <string name="profilecard_name">No user found</string>
    <string name="profilecard_birthdate_label">Date of birth</string>
    <string name="profilecard_birthdate">No date found</string>
    <string name="profilecard_course_label">Course of study</string>
    <string name="profilecard_course">No course found</string>
    <string name="profilecard_gender_label">Gender</string>
    <string name="profilecard_gender">No gender found</string>
    <string name="profilecard_course_404">N/A</string>

    <string name="required_indicator">*</string>

    <string name="toast_storage_permission_error">Please grant storage permission before using this feature.</string>
    <string name="toast_require_local_account">To use this functionality a local account is required. Please consider creating one.</string>
    <string name="toast_fill_required_fields">Please fill in all required fields.</string>
    <string name="event_details_total_attendees">[X / Y]</string>
    <string name="event_details_total_attendees_count">out of</string>

    <string name="userstate_attendee">You are participating in an event.</string>
    <string name="userstate_creator">You are hosting an event.</string>

</resources>