<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/mBottomSheetsContents"
    android:orientation="vertical">

    <LinearLayout
        style="@style/mLabelContainer"
        android:id="@+id/event_creation_eventname_container" >

        <TextView
            style="@style/mLabels"
            android:text="@string/event_creation_label_eventname" />

        <EditText
            style="@style/mEditTexts"
            android:id="@+id/event_creation_eventname" />
    </LinearLayout>

    <LinearLayout
        style="@style/mLabelContainer"
        android:id="@+id/event_creation_description_container" >

        <TextView
            style="@style/mLabels"
            android:text="@string/event_creation_label_description" />

        <EditText
            style="@style/mEditTexts"
            android:id="@+id/event_creation_description"
            android:lines="5"/>
    </LinearLayout>


    <LinearLayout
        style="@style/mLabelContainer"
        android:id="@+id/event_creation_genre_container" >

        <TextView
            style="@style/mLabels"
            android:text="@string/event_creation_label_genre" />

        <Spinner
            android:id="@+id/event_creation_genre_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <Button
        android:id="@+id/event_create_button"
        style="@style/mButtons"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/event_creation_button_create" />

</LinearLayout>