<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/creator_bottomSheet"
    style="@style/mBottomSheets">

    <androidx.core.widget.NestedScrollView style="@style/mScrollViews">

        <LinearLayout
            style="@style/mBottomSheetsContents"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/event_creation_eventname_container"
                style="@style/mLabelContainer">

                <TextView
                    style="@style/mLabels"
                    android:text="@string/event_creation_label_eventname" />

                <EditText
                    android:id="@+id/event_creation_eventname"
                    style="@style/mEditTexts"
                    android:text="@{eventCreationData.name}"
                    tools:ignore="Autofill,LabelFor" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/event_creation_description_container"
                style="@style/mLabelContainer">

                <TextView
                    style="@style/mLabels"
                    android:text="@string/event_creation_label_description" />

                <EditText
                    android:id="@+id/event_creation_description"
                    style="@style/mEditTexts"
                    android:lines="5"
                    android:text="@{eventCreationData.description}"
                    tools:ignore="Autofill,LabelFor" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/event_creation_genre_container"
                style="@style/mLabelContainer">

                <TextView
                    style="@style/mLabels"
                    android:text="@string/event_creation_label_genre" />

                <Spinner
                    android:id="@+id/event_creation_genre_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:background="@android:color/transparent"
                    android:dropDownSelector="@null" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_creation_hint"/>

            <Button
                android:id="@+id/event_create_button"
                style="@style/mButtons"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                android:text="@string/event_creation_button_create" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>
