<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/undraw_location"
            android:elevation="2dp"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                style="@style/mTutorialLabels"
                android:text="@string/tutorial_location_title"
                android:translationX="-5dp" />

            <TextView
                style="@style/mTutorialSublabels"
                android:text="@string/tutorial_location_subtitle" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tutorial_location_content" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/tutorial_indicator_1"
                style="@style/mSlideIndicator"
                android:src="@drawable/tutorial_slideindicator_unselected"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/tutorial_indicator_2"
                style="@style/mSlideIndicator"
                android:src="@drawable/tutorial_slideindicator_unselected"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/tutorial_indicator_3"
                style="@style/mSlideIndicator"
                android:src="@drawable/tutorial_slideindicator_unselected"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/tutorial_indicator_4"
                style="@style/mSlideIndicator"
                android:src="@drawable/tutorial_slideindicator_selected"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <Button
            android:id="@+id/tutorial_btn_prev"
            style="@style/mButtonsPlain"
            android:layout_marginBottom="8dp"
            android:text="@string/tutorial_prev" />

        <Button
            android:id="@+id/tutorial_btn_next"
            style="@style/mButtons"
            android:layout_marginBottom="16dp"
            android:text="@string/tutorial_finalize" />
    </LinearLayout>
</RelativeLayout>